add extension button

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
       <p class="desc">Tap the button to launch the Diddy Game in your browser.</p>
       <div class="actions">
         <a class="btn" href="https://ashton20271.github.io/diddygame/" aria-label="Open Diddy Game">🎮 Diddy Game</a>
+        <a class="btn" href="https://github.com/Ashton20271/diddygame/releases/latest" aria-label="Get Extension">🧩 Get Extension</a>
       </div>
       <footer>
       </footer>
