--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Diddy Game</title>
-  <link rel="icon" href="favicon.ico" />
+  <title>Ashton20271</title>
   <style>
     :root {
       --bg: #0b0c10;
@@ -119,6 +118,15 @@
       </div>
       <footer>
       </footer>
+    </section>
+    <!-- EP Not Focused On Window Bypass Box -->
+    <section class="card" aria-labelledby="ep-title" style="margin-top: 32px;">
+      <img class="logo" src="ep.png" alt="EP Not Focused On Window Bypass" />
+      <h1 id="ep-title">EP Not Focused On Window Bypass</h1>
+      <p class="desc">Bypass the "not focused on window" restriction in EP. Use the button below to get the extension.</p>
+      <div class="actions">
+        <a class="btn" href="https://github.com/Ashton20271/ep-not-focused-on-window-bypass/releases/latest" aria-label="Get EP Extension">🧩 Get Extension</a>
+      </div>
     </section>
   </main>
 </body>
