--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="google-site-verification" content="uhHz-mmS4m_iLDouWjnb4mRHDnAhDsJkzUidK1zlugc" />
   <title>Ashton20271</title>
   <style>
     :root {
