update extension links

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <p class="desc">Tap the button to launch the Diddy Game in your browser.</p>
       <div class="actions">
         <a class="btn" href="https://ashton20271.github.io/diddygame/" aria-label="Open Diddy Game">🎮 Diddy Game</a>
-        <a class="btn" href="https://github.com/Ashton20271/diddygame/releases/latest" aria-label="Get Extension">🧩 Get Extension</a>
+        <a class="btn" href="https://chromewebstore.google.com/detail/diddy-game/bfjbmoglpfpbkaneffbihgnogdibgfpf" aria-label="Get Extension">🧩 Get Extension</a>
       </div>
       <footer>
       </footer>
@@ -126,7 +126,7 @@
       <h1 id="ep-title">EP Not Focused On Window Bypass</h1>
       <p class="desc">Bypass the "not focused on window" restriction in EP. Use the button below to get the extension.</p>
       <div class="actions">
-        <a class="btn" href="https://github.com/Ashton20271/ep-not-focused-on-window-bypass/releases/latest" aria-label="Get EP Extension">🧩 Get Extension</a>
+        <a class="btn" href="https://chromewebstore.google.com/detail/education-perfect-always/jckdooghdfhkndjjjojhpepkiinhcdgp" aria-label="Get EP Extension">🧩 Get Extension</a>
       </div>
     </section>
   </main>
