--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <h1 id="title">Diddy Game</h1>
       <p class="desc">Tap the button to launch the Diddy Game in your browser.</p>
       <div class="actions">
-        <a class="btn" href="https://ashton20271.github.io/diddygame/" aria-label="Open Diddy Game">🎮 Diddy Game</a>
+        <a class="btn" href="https://diddygame.vercel.app" aria-label="Open Diddy Game">🎮 Diddy Game</a>
         <a class="btn" href="https://chromewebstore.google.com/detail/diddy-game/bfjbmoglpfpbkaneffbihgnogdibgfpf" aria-label="Get Extension">🧩 Get Extension</a>
       </div>
       <footer>
